# arrow-udf

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md  release.toml
.github/: dependabot.yml
.github/workflows/: bench.yml  ci.yml  maven.yml
arrow-udf/: CHANGELOG.md  Cargo.toml  README.md
arrow-udf-bench/: Cargo.toml  README.md
arrow-udf-bench/benches/: bench.rs
arrow-udf-deno/: Cargo.toml  README.md  build.rs
arrow-udf-deno-runtime/: Cargo.toml
arrow-udf-deno-runtime/js/decimal/: decimal.js
arrow-udf-deno-runtime/js/runtime/: 06_util.js  11_workers.js  98_global_scope_shared_nofetch.js
arrow-udf-deno-runtime/src/: lib.rs
arrow-udf-deno-runtime/src/ops/: bootstrap.rs  mod.rs  signal.rs
arrow-udf-deno/examples/: js.rs  sse.rs
arrow-udf-deno/examples/sse/: .gitignore  package.json
arrow-udf-deno/examples/sse-server/src/: main.rs
arrow-udf-deno/examples/sse/esbuild/: bundler.js
arrow-udf-deno/src/: deno_arrow.rs  lib.rs  tokio_spawn_pinned.rs
arrow-udf-deno/tests/: async_js.rs  js.rs  web_apis.rs
arrow-udf-duckdb-example/: .gitignore  Cargo.toml  Makefile  README.md
arrow-udf-duckdb-example/src/: lib.rs
arrow-udf-duckdb-example/test/sql/: arrow_udf_duckdb_example.test
arrow-udf-example/: Cargo.toml
arrow-udf-example/src/: lib.rs
arrow-udf-flight/: CHANGELOG.md  Cargo.toml  README.md
arrow-udf-flight/java/: CHANGELOG.md  README.md  pom.xml
arrow-udf-flight/java/src/main/java/com/risingwave/functions/: DecimalVector.java  JsonVector.java  ScalarFunctionBatch.java  TableFunctionBatch.java  TypeUtils.java  UdfProducer.java
arrow-udf-flight/java/src/test/java/com/risingwave/functions/: TestUdfServer.java
arrow-udf-flight/python/: .gitignore  CHANGELOG.md  README.md  example.py  publish.md  pyproject.toml
arrow-udf-flight/python/arrow_udf/: __init__.py  test_udf.py  typing.py
arrow-udf-flight/python/risingwave/: test_udf.py  udf.py
arrow-udf-flight/src/: error.rs  lib.rs
arrow-udf-flight/tests/: flight.rs
arrow-udf-js/: CHANGELOG.md  Cargo.toml  README.md
arrow-udf-js-deno/: Cargo.toml  README.md  build.rs
arrow-udf-js-deno-runtime/: Cargo.toml
arrow-udf-js-deno-runtime/js/dayjs/: setup.dayjs.js
arrow-udf-js-deno-runtime/js/decimal/: big.decimal.js
arrow-udf-js-deno-runtime/js/runtime/: 01_errors.js  11_workers.js  30_os.js  40_process.js  40_read_file.js  40_signals.js  40_write_file.js  90_deno_ns.js  90_deno_ns_nofetch.js  98_global_scope_shared.js  98_global_scope_window.js  98_global_scope_worker.js  99_main.js
arrow-udf-js-deno-runtime/src/: deno_runtime.rs  lib.rs  permissions.rs
arrow-udf-js-deno-runtime/src/ops/: http.rs  os.rs  permissions.rs  runtime.rs  signal.rs  tty.rs  utils.rs
arrow-udf-js-deno/examples/: js.rs  sse.rs
arrow-udf-js-deno/examples/sse/: package-lock.json  package.json  tsconfig.json
arrow-udf-js-deno/examples/sse-server/: Cargo.toml
arrow-udf-js-deno/examples/sse-server/src/: main.rs
arrow-udf-js-deno/examples/sse/esbuild/: bundler-table.js
arrow-udf-js-deno/examples/sse/src/: index.ts
arrow-udf-js-deno/src/: deno_arrow.rs  lib.rs  tokio_spawn_pinned.rs  values_future.rs
arrow-udf-js-deno/src/v8/: mod.rs
arrow-udf-js-deno/tests/: async_js.rs  js.rs  web_apis.rs
arrow-udf-js/examples/: js.rs
arrow-udf-js/src/: doc_create_aggregate.txt  doc_create_function.txt  fetch.js  fetch.rs  headers.js  jsarrow.rs  lib.rs
arrow-udf-js/src/fetch/: README.md  fetch.js  fetch.test.js  headers.test.js  mod.rs  response.rs
arrow-udf-js/tests/: fetch.rs  js.rs
arrow-udf-macros/: CHANGELOG.md  Cargo.toml  README.md
arrow-udf-macros/src/: gen.rs  lib.rs  parse.rs  struct_type.rs  types.rs  utils.rs
arrow-udf-macros/src/testdata/: struct.input.rs  struct.output.rs
arrow-udf-python/: CHANGELOG.md  Cargo.toml  README.md  build.rs
arrow-udf-python-wasm/: Cargo.toml  README.md
arrow-udf-python-wasm/examples/: python_wasm.rs
arrow-udf-python-wasm/src/: lib.rs
arrow-udf-python/examples/: python.rs
arrow-udf-python/src/: doc_create_aggregate.txt  ffi.rs  interpreter.rs  into_field.rs  lib.rs  pyarrow.rs
arrow-udf-python/tests/: python.rs
arrow-udf-remote/java/: CHANGELOG.md  README.md  pom.xml
arrow-udf-remote/python/: .gitignore  CHANGELOG.md  pyproject.toml
arrow-udf-remote/python/arrow_udf/: test_udf.py
arrow-udf-runtime/: CHANGELOG.md  Cargo.toml  README.md  build.rs
arrow-udf-runtime/examples/: javascript.rs  python.rs  wasm.rs
arrow-udf-runtime/src/: lib.rs
arrow-udf-runtime/src/javascript/: README.md  doc_create_aggregate.txt  mod.rs
arrow-udf-runtime/src/python/: README.md  doc_create_aggregate.txt  doc_create_function.txt  mod.rs  pyarrow.rs
arrow-udf-runtime/src/remote/: README.md  mod.rs
arrow-udf-runtime/src/wasm/: README.md  build.rs  mod.rs
arrow-udf-runtime/tests/: javascript.rs  javascript_fetch.rs  python.rs  wasm.rs  wasm_build.rs
arrow-udf-wasm/: CHANGELOG.md  Cargo.toml  README.md
arrow-udf-wasm-example/: Cargo.toml
arrow-udf-wasm-example/src/: lib.rs
arrow-udf-wasm-runtime/: Cargo.toml
arrow-udf-wasm-runtime/benches/: wasm.rs
arrow-udf-wasm-runtime/examples/: gcd.rs
arrow-udf-wasm-runtime/src/: lib.rs  main.rs
arrow-udf-wasm/benches/: wasm.rs
arrow-udf-wasm/examples/: wasm.rs
arrow-udf-wasm/src/: build.rs  into_field.rs  lib.rs
arrow-udf-wasm/tests/: build.rs  wasm.rs
arrow-udf/arrow-udf-macros/: CHANGELOG.md  Cargo.toml
arrow-udf/arrow-udf-macros/src/: codegen_utils.rs  gen.rs  lib.rs  parse.rs  struct_type.rs  types.rs
arrow-udf/arrow-udf-macros/src/testdata/: struct.input.rs  struct.output.rs
arrow-udf/examples/: embedded_rust_udf.rs  rust.rs
arrow-udf/src/: byte_builder.rs  error.rs  ffi.rs  lib.rs  sig.rs  types.rs
arrow-udf/tests/: duckdb.rs  tests.rs
arrow-udf/tests/cases/: mod.rs  visibility_tests.rs
arrow-udf/tests/common/: mod.rs
arrow-wasm-udf/: Cargo.toml
arrow-wasm-udf-macros/: Cargo.toml
arrow-wasm-udf-macros/src/: gen.rs  lib.rs  parse.rs  types.rs
arrow-wasm-udf/src/: lib.rs
arrow-wasm-udf/tests/: tests.rs
dev/bench/: data.js
(+2 files in other folders)
