[workspace]
resolver = "2"
members = [
  "arrow-udf",
  "arrow-udf/arrow-udf-macros",
  "arrow-udf-bench",
  "arrow-udf-example",
  "arrow-udf-runtime",
]
exclude = ["arrow-udf-duckdb-example"]

[workspace.dependencies]
anyhow = "1"
arrow-arith = "55"
arrow-array = "55"
arrow-buffer = "55"
arrow-cast = "55"
arrow-schema = "55"
arrow-select = "55"
arrow-ipc = "55"
arrow-data = "55"
arrow-flight = "55"
expect-test = "1"
serde_json = "1"
tokio = "1"

[workspace.package]
repository = "https://github.com/risingwavelabs/arrow-udf"
license = "Apache-2.0"
edition = "2021"
