[workspace]
resolver = "2"
members = [
  "arrow-udf",
  "arrow-udf/arrow-udf-macros",
  "arrow-udf-bench",
  "arrow-udf-example",
  "arrow-udf-runtime",
]
exclude = ["arrow-udf-duckdb-example"]

[workspace.dependencies]
anyhow = "1"
arrow-arith = "56"
arrow-array = "56"
arrow-buffer = "56"
arrow-cast = "56"
arrow-schema = "56"
arrow-select = "56"
arrow-ipc = "56"
arrow-data = "56"
arrow-flight = "56"
expect-test = "1"
serde_json = "1"
tokio = "1"

[workspace.package]
repository = "https://github.com/arrow-udf/arrow-udf"
license = "Apache-2.0"
edition = "2021"
