[workspace]
resolver = "2"
members = [
  "arrow-udf",
  "arrow-udf/arrow-udf-macros",
  "arrow-udf-bench",
  "arrow-udf-example",
  "arrow-udf-runtime",
]
exclude = ["arrow-udf-duckdb-example"]

[workspace.dependencies]
anyhow = "1"
arrow-arith = "58"
arrow-array = "58"
arrow-buffer = "58"
arrow-cast = "58"
arrow-schema = "58"
arrow-select = "58"
arrow-ipc = "58"
arrow-data = "58"
arrow-flight = "58"
expect-test = "1"
serde_json = "1"
tokio = "1"

[workspace.package]
repository = "https://github.com/arrow-udf/arrow-udf"
license = "Apache-2.0"
edition = "2024"
