[package]
name = "arrow-udf-bench"
edition = "2021"
description = "Benchmark Arrow UDFs for different languages"
repository = "https://github.com/risingwavelabs/arrow-udf"
keywords = ["arrow", "udf"]
license = "Apache-2.0"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
arrow-arith.workspace = true
arrow-array.workspace = true
arrow-cast = { workspace = true, features = ["prettyprint"] }
arrow-schema.workspace = true
arrow-udf = { path = "../arrow-udf" }
arrow-udf-runtime = { path = "../arrow-udf-runtime", features = ["embedded"] }
criterion = { version = "0.5", features = ["async_tokio", "async_futures"] }
tokio = { workspace = true, features = ["rt"] }
futures-util = "0.3"

[[bench]]
name = "bench"
harness = false
