[package]
name = "arrow-udf-deno-runtime"
version = "0.0.1"
edition = "2021"
description = "Deno runtime for Arrow UDFs."
repository = "https://github.com/risingwavelabs/arrow-udf"
keywords = ["arrow", "udf", "deno"]
license = "Apache-2.0"

[features]
default = []
with-fetch = ["deno_fetch", "deno_http", "deno_websocket", "hyper"]
with-dayjs = []

[dependencies]
anyhow = "1"
deno_ast = { version = "1.0.1", features = ["cjs", "transpiling"] }
deno_console = "0.142.0"
deno_core = "0.270.0"
deno_crypto = "0.156.0"
deno_fetch = { version = "0.166.0", optional = true }
deno_http = { version = "0.139.0", optional = true }
deno_io = "0.52.0"
deno_napi = "0.72.0"
deno_net = "0.134.0"
deno_tls = "0.129.0"
deno_url = "0.142.0"
deno_web = "0.173.0"
deno_webidl = "0.142.0"
deno_websocket = { version = "0.147.0", optional = true }
hyper = { version = "0.14", features = ["client"], optional = true }
libc = "0.2"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
signal-hook-registry = "1.4.0"
tokio = { version = "1", features = ["full"] }
v8 = "0.85.0"