[package]
name = "arrow-udf-duckdb-example"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
arrow-udf = { path = "../arrow-udf" }
duckdb = { version = "=1.4", features = [
    "vscalar",
    "vscalar-arrow",
    "vtab-arrow",
    "loadable-extension",
] }
libduckdb-sys = "=1.4"
