[package]
name = "arrow-udf-example"
version = "0.2.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
arrow-udf = { path = "../arrow-udf", features = ["global_registry"] }
linkme = { version = "0.3" }
