[package]
name = "arrow-udf-flight"
version = "0.2.0"
edition = "2021"
description = "Client for remote Arrow UDFs."
repository = "https://github.com/risingwavelabs/arrow-udf"
keywords = ["arrow", "udf", "flight"]
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-array = ">=52"
arrow-flight = ">=52"
arrow-schema = ">=52"
arrow-select = ">=52"
futures-util = "0.3"
thiserror = "1"
tokio = { version = "1", features = ["time"] }
tonic = "0.11"
tracing = "0.1"

[dev-dependencies]
arrow-cast = { version = ">=52", features = ["prettyprint"] }
expect-test = "1"
