[package]
name = "arrow-udf-js-deno-runtime"
version = "0.0.1"
edition = "2021"
description = "Deno runtime for Arrow UDFs."
repository = "https://github.com/risingwavelabs/arrow-udf"
keywords = ["arrow", "udf", "deno"]
license = "Apache-2.0"

[features]
default = []
with-fetch = ["deno_fetch", "deno_http", "deno_websocket", "hyper"]
with-dayjs = []

[dependencies]
anyhow = "1"
deno_ast = { version = "0.34", features = ["cjs", "transpiling"] }
deno_console = "0.144.0"
deno_core = { version = "0.272.0", features = ["unsafe_use_unprotected_platform"] }
deno_crypto = "0.158.0"
deno_fetch = { version = "0.168.0", optional = true }
deno_http = { version = "0.141.0", optional = true }
deno_io = "0.54.0"
deno_net = "0.136.0"
deno_tls = "0.131.0"
deno_url = "0.144.0"
deno_web = "0.175.0"
deno_webidl = "0.144.0"
deno_websocket = { version = "0.149.0", optional = true }
hyper = { version = "0.14", features = ["client"], optional = true }
libc = "0.2"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
signal-hook-registry = "1.4.0"
tokio = { version = "1", features = ["rt"] }
v8 = "0.89.0"
