[package]
name = "arrow-udf-js"
version = "0.5.0"
edition = "2021"
description = "JavaScript runtime for Arrow UDFs."
repository = "https://github.com/risingwavelabs/arrow-udf"
keywords = ["arrow", "udf", "javascript"]
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
arrow-array.workspace = true
arrow-buffer.workspace = true
arrow-schema.workspace = true
atomic-time = "0.1"
rquickjs = { version = "0.6", features = ["array-buffer", "parallel", "futures"] }
futures-util = "0.3"
tokio = { version = "1", features = ["time", "test-util", "macros"] }

[dev-dependencies]
arrow-cast = { workspace = true, features = ["prettyprint"] }
arrow-select.workspace = true
expect-test = "1"
