[package]
name = "arrow-udf-macros"
version = "0.1.1"
edition = "2021"
description = "Procedural macros for generating Arrow functions."
repository = "https://github.com/risingwavelabs/arrow-udf"
keywords = ["arrow", "udf"]
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
base64 = "0.21"
itertools = "0.12"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
