[package]
name = "arrow-udf-macros"
version = "0.5.0"
edition = "2021"
description = "Procedural macros for generating Arrow functions."
repository = "https://github.com/risingwavelabs/arrow-udf"
keywords = ["arrow", "udf"]
license = "Apache-2.0"

[lib]
proc-macro = true

[features]
global_registry = ["linkme"]

[dependencies]
base64 = "0.22"
itertools = "0.12"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
linkme = { version = "0.3", optional = true }

[dev-dependencies]
expect-test = "1"
prettyplease = "0.2"
