[package]
name = "arrow-udf-python-wasm"
version = "0.1.0"
edition = "2021"
description = "Python WebAssembly runtime for Arrow UDFs."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
arrow-array = "49"
arrow-ipc = "49"
arrow-schema = "49"
lazy_static = "1"
wasmtime = "16"
wasmtime-wasi = "16"

[dev-dependencies]
arrow-arith = "49"
arrow-cast = { version = "49", features = ["prettyprint"] }
criterion = "0.5"
