[package]
name = "arrow-udf-python-wasm"
version = "0.1.0"
edition = "2021"
description = "Python WebAssembly runtime for Arrow UDFs."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
arrow-array = "50"
arrow-ipc = "50"
arrow-schema = "50"
lazy_static = "1"
wasmtime = "17"
wasmtime-wasi = "17"

[dev-dependencies]
arrow-arith = "50"
arrow-cast = { version = "50", features = ["prettyprint"] }
criterion = "0.5"
