[package]
name = "arrow-udf-python"
version = "0.2.1"
edition = "2021"
description = "Python runtime for Arrow UDFs."
repository = "https://github.com/risingwavelabs/arrow-udf"
keywords = ["arrow", "udf", "python"]
license = "Apache-2.0"

[dependencies]
anyhow = "1"
arrow-array = ">=50"
arrow-buffer = ">=50"
arrow-ipc = ">=50"
arrow-schema = ">=50"
lazy_static = "1"
pyo3 = "0.21"

[build-dependencies]
pyo3-build-config = "0.21"

[dev-dependencies]
arrow-cast = { version = ">=50", features = ["prettyprint"] }
arrow-select = ">=50"
expect-test = "1"
