[package]
name = "arrow-udf-python"
version = "0.4.0"
edition = "2021"
description = "Python runtime for Arrow UDFs."
repository = "https://github.com/risingwavelabs/arrow-udf"
keywords = ["arrow", "udf", "python"]
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-ipc = { workspace = true }
arrow-schema = { workspace = true }
pyo3 = { version = "0.23" }

[build-dependencies]
pyo3-build-config = "0.23"

[dev-dependencies]
arrow-cast = { workspace = true, features = ["prettyprint"] }
arrow-select = { workspace = true }
expect-test = "1"
