[package]
name = "arrow-udf-wasm-runtime"
version = "0.1.0"
edition = "2021"
description = "WebAssembly runtime for Arrow UDFs."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
arrow-array = "49"
arrow-ipc = "49"
arrow-schema = "49"
base64 = "0.21"
lazy_static = "1"
wasmtime = "15"
wasmtime-wasi = "15"

[dev-dependencies]
arrow-arith = "49"
arrow-cast = { version = "49", features = ["prettyprint"] }
criterion = "0.5"

[[bench]]
name = "wasm"
harness = false
