[package]
name = "arrow-udf-wasm"
version = "0.2.2"
edition = "2021"
description = "WebAssembly runtime for Arrow UDFs."
repository = "https://github.com/risingwavelabs/arrow-udf"
keywords = ["arrow", "udf", "wasm"]
categories = ["wasm"]
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
build = ["tempfile"]

[dependencies]
anyhow = "1"
arrow-array = ">=50"
arrow-ipc = ">=50"
arrow-schema = ">=50"
async-trait = "0.1"
base64 = "0.22"
genawaiter = "0.99"
once_cell = "1"
tempfile = { version = "3", optional = true }
wasi-common = "22"
wasmtime = "22"

[dev-dependencies]
arrow-cast = { version = ">=50", features = ["prettyprint"] }
expect-test = "1"
