[package]
name = "arrow-udf-wasm"
version = "0.4.0"
edition = "2021"
description = "WebAssembly runtime for Arrow UDFs."
repository = "https://github.com/risingwavelabs/arrow-udf"
keywords = ["arrow", "udf", "wasm"]
categories = ["wasm"]
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
build = ["tempfile"]

[dependencies]
anyhow = { workspace = true }
arrow-array = { workspace = true }
arrow-ipc = { workspace = true }
arrow-schema = { workspace = true }
async-trait = "0.1"
base64 = "0.22"
genawaiter = "0.99"
once_cell = "1"
tempfile = { version = "3", optional = true }
wasi-common = "22"
wasmtime = "27"

[dev-dependencies]
arrow-cast = { workspace = true, features = ["prettyprint"] }
expect-test = "1"
