[package]
name = "arrow-udf"
version = "0.5.0"
edition = "2021"
description = "User-defined function framework for arrow-rs."
repository = "https://github.com/risingwavelabs/arrow-udf"
keywords = ["arrow", "udf"]
categories = ["wasm"]
license = "Apache-2.0"

[features]
global_registry = ["linkme"]

[dependencies]
arrow-arith.workspace = true
arrow-array.workspace = true
arrow-buffer.workspace = true
arrow-data.workspace = true
arrow-ipc.workspace = true
arrow-schema.workspace = true
arrow-udf-macros = { version = "0.4.1", path = "../arrow-udf-macros" }
chrono = { version = "0.4", default-features = false }
genawaiter = "0.99"
linkme = { version = "0.3", optional = true }
rust_decimal = "1"
serde_json = "1"
thiserror = "1"

[dev-dependencies]
arrow-cast = { workspace = true, features = ["prettyprint"] }
expect-test = "1"
