[package]
name = "arrow-udf"
version = "0.7.0"
description = "User-defined function framework for arrow-rs."
keywords = ["arrow", "udf"]
categories = ["wasm"]
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
global_registry = ["linkme", "arrow-udf-macros/global_registry"]

[dependencies]
arrow-arith.workspace = true
arrow-array.workspace = true
arrow-ipc.workspace = true
arrow-schema.workspace = true
arrow-udf-macros = { version = "=0.7.0", path = "arrow-udf-macros" }
chrono = { version = "0.4", default-features = false }
genawaiter2 = "0.100.1"
linkme = { version = "0.3", optional = true }
rust_decimal = "1"
serde_json = "1"
duckdb = { version = "1.3", features = [
    "vscalar",
    "vscalar-arrow",
    "vtab-arrow",
    "vtab-loadable",
], optional = true }

[dev-dependencies]
arrow-cast = { workspace = true, features = ["prettyprint"] }
expect-test = "1"
