[package]
name = "arrow-wasm-udf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { version = "49", default-features = false }
arrow-wasm-udf-macros = { version = "0.1.0", path = "../arrow-wasm-udf-macros" }
itertools = "0.12"
