[package]
name = "arrow-udf-macros"
version = "0.8.0"
description = "Procedural macros for generating Arrow functions."
keywords = ["arrow", "udf"]
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[features]
global_registry = []

[dependencies]
base64 = "0.22"
itertools = "0.12"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

[dev-dependencies]
expect-test = "1"
prettyplease = "0.2"
